// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with  from 0 1`] = `
<div>
  <p>
    Viewing 
    1
     expenses totalling to 
    $0.10
     
  </p>
</div>
`;

exports[`should render expense summary with  from multuople expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling to 
    $41.23
     
  </p>
</div>
`;
